2007-04-30 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added radial chart
        * plotpriv.tcl:  Added routines for radial chart
        * plotchart.man: Description of radial chart
        * plotchart.test: Test for such charts
        * plotdemos4.tcl: New set of demos - 3D bars and radial charts
        * plotdemos5.tcl: New set of demos - contour plots

2007-04-29 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added balloon text
        * plotchart.man: Description of balloon text
        * plotchart.test: Test for balloon text and Gantt chart
        * plotannot.tcl: File with procedures for annotations

2007-04-17 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added 3D barchart
        * plotchart.man: Description of 3D barchart
        * plotbusiness.tcl: File with procedures for business-type charts

2007-02-10 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Description of legend commands
        * plotchart.tcl: Raised version to 1.2
        * pkgIndext.tcl: Raised version to 1.2

        * Still to do:
          - draw integer numbers, if the axis numbers _are_ integer
          - add a facility for displaying balloon text

2007-02-09 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added commands for drawing and configuring
                         the legend
        * plotaxis.tcl: Actual procedures for legend
        * plotpriv.tcl: Small change in procedure to plot symbols
        * plotchart.test: Added commands to test legend

        * Still to do:
          - document the legend commands
          - draw integer numbers, if the axis numbers _are_ integer
          - add a facility for displaying balloon text

2007-02-09  Andreas Kupries  <andreask@activestate.com>

	* plotchart.man: Fixed syntax errors introduced by last checkin,
	  consistently missing closing brackets. It is strongly