@@ -1,3 +1,7 @@
+2007-05-03 Arjen Markus  <arjenmarkus@users.sourceforge.net>
+        * plotpriv.tcl: Expanded the saveplot method (other file formats
+                        than PostScript via Img)
+
 2007-04-30 Arjen Markus  <arjenmarkus@users.sourceforge.net>
         * plotchart.tcl: Added radial chart
         * plotpriv.tcl:  Added routines for radial chart
